public_html/SLFQ/simplify/poly.output
Terminals unused in grammar

   UMINUS


Grammar

    0 $accept: twsm $end

    1 twsm: formula

    2 formula: atom
    3        | formula ANDTOK formula
    4        | formula ORTOK formula
    5        | LEFTP formula RIGHTP

    6 atom: polynomial RELOPTOK ZERO
    7     | polynomial RELOPTOK rootindex
    8     | TRUETOK
    9     | FALSETOK

   10 aobj: VAR
   11     | NUMBER
   12     | aobj EXP NUMBER

   13 term: aobj
   14     | term PROD aobj
   15     | term DIV NUMBER
   16     | term aobj

   17 mpolynomial: term
   18            | mpolynomial PLUS mpolynomial
   19            | mpolynomial MINUS mpolynomial

   20 polynomial: mpolynomial
   21           | MINUS mpolynomial

   22 rootindex: RSYMBP NUMBER polynomial
   23          | RSYMBN NUMBER polynomial


Terminals, with rules where they appear

$end (0) 0
error (256)
VAR (258) 10
PLUS (259) 18
MINUS (260) 19 21
PROD (261) 14
EXP (262) 12
DIV (263) 15
NUMBER (264) 11 12 15 22 23
RELOPTOK (265) 6 7
ZERO (266) 6
ANDTOK (267) 3
ORTOK (268) 4
LEFTP (269) 5
RIGHTP (270) 5
RSYMBP (271) 22
RSYMBN (272) 23
TRUETOK (273) 8
FALSETOK (274) 9
IROOT (275)
UMINUS (276)


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
twsm (23)
    on left: 1, on right: 0
formula (24)
    on left: 2 3 4 5, on right: 1 3 4 5
atom (25)
    on left: 6 7 8 9, on right: 2
aobj (26)
    on left: 10 11 12, on right: 12 13 14 16
term (27)
    on left: 13 14 15 16, on right: 14 15 16 17
mpolynomial (28)
    on left: 17 18 19, on right: 18 19 20 21
polynomial (29)
    on left: 20 21, on right: 6 7 22 23
rootindex (30)
    on left: 22 23, on right: 7


state 0

    0 $accept: . twsm $end

    VAR       shift, and go to state 1
    MINUS     shift, and go to state 2
    NUMBER    shift, and go to state 3
    LEFTP     shift, and go to state 4
    TRUETOK   shift, and go to state 5
    FALSETOK  shift, and go to state 6

    twsm         go to state 7
    formula      go to state 8
    atom         go to state 9
    aobj         go to state 10
    term         go to state 11
    mpolynomial  go to state 12
    polynomial   go to state 13


state 1

   10 aobj: VAR .

    $default  reduce using rule 10 (aobj)


state 2

   21 polynomial: MINUS . mpolynomial

    VAR     shift, and go to state 1
    NUMBER  shift, and go to state 3

    aobj         go to state 10
    term         go to state 11
    mpolynomial  go to state 14


state 3

   11 aobj: NUMBER .

    $default  reduce using rule 11 (aobj)


state 4

    5 formula: LEFTP . formula RIGHTP

    VAR       shift, and go to state 1
    MINUS     shift, and go to state 2
    NUMBER    shift, and go to state 3
    LEFTP     shift, and go to state 4
    TRUETOK   shift, and go to state 5
    FALSETOK  shift, and go to state 6

    formula      go to state 15
    atom         go to state 9
    aobj         go to state 10
    term         go to state 11
    mpolynomial  go to state 12
    polynomial   go to state 13


state 5

    8 atom: TRUETOK .

    $default  reduce using rule 8 (atom)


state 6

    9 atom: FALSETOK .

    $default  reduce using rule 9 (atom)


state 7

    0 $accept: twsm . $end

    $end  shift, and go to state 16


state 8

    1 twsm: formula .
    3 formula: formula . ANDTOK formula
    4        | formula . ORTOK formula

    ANDTOK  shift, and go to state 17
    ORTOK   shift, and go to state 18

    $default  reduce using rule 1 (twsm)


state 9

    2 formula: atom .

    $default  reduce using rule 2 (formula)


state 10

   12 aobj: aobj . EXP NUMBER
   13 term: aobj .

    EXP  shift, and go to state 19

    $default  reduce using rule 13 (term)


state 11

   14 term: term . PROD aobj
   15     | term . DIV NUMBER
   16     | term . aobj
   17 mpolynomial: term .

    VAR     shift, and go to state 1
    PROD    shift, and go to state 20
    DIV     shift, and go to state 21
    NUMBER  shift, and go to state 3

    $default  reduce using rule 17 (mpolynomial)

    aobj  go to state 22


state 12

   18 mpolynomial: mpolynomial . PLUS mpolynomial
   19            | mpolynomial . MINUS mpolynomial
   20 polynomial: mpolynomial .

    PLUS   shift, and go to state 23
    MINUS  shift, and go to state 24

    $default  reduce using rule 20 (polynomial)


state 13

    6 atom: polynomial . RELOPTOK ZERO
    7     | polynomial . RELOPTOK rootindex

    RELOPTOK  shift, and go to state 25


state 14

   18 mpolynomial: mpolynomial . PLUS mpolynomial
   19            | mpolynomial . MINUS mpolynomial
   21 polynomial: MINUS mpolynomial .

    PLUS   shift, and go to state 23
    MINUS  shift, and go to state 24

    $default  reduce using rule 21 (polynomial)


state 15

    3 formula: formula . ANDTOK formula
    4        | formula . ORTOK formula
    5        | LEFTP formula . RIGHTP

    ANDTOK  shift, and go to state 17
    ORTOK   shift, and go to state 18
    RIGHTP  shift, and go to state 26


state 16

    0 $accept: twsm $end .

    $default  accept


state 17

    3 formula: formula ANDTOK . formula

    VAR       shift, and go to state 1
    MINUS     shift, and go to state 2
    NUMBER    shift, and go to state 3
    LEFTP     shift, and go to state 4
    TRUETOK   shift, and go to state 5
    FALSETOK  shift, and go to state 6

    formula      go to state 27
    atom         go to state 9
    aobj         go to state 10
    term         go to state 11
    mpolynomial  go to state 12
    polynomial   go to state 13


state 18

    4 formula: formula ORTOK . formula

    VAR       shift, and go to state 1
    MINUS     shift, and go to state 2
    NUMBER    shift, and go to state 3
    LEFTP     shift, and go to state 4
    TRUETOK   shift, and go to state 5
    FALSETOK  shift, and go to state 6

    formula      go to state 28
    atom         go to state 9
    aobj         go to state 10
    term         go to state 11
    mpolynomial  go to state 12
    polynomial   go to state 13


state 19

   12 aobj: aobj EXP . NUMBER

    NUMBER  shift, and go to state 29


state 20

   14 term: term PROD . aobj

    VAR     shift, and go to state 1
    NUMBER  shift, and go to state 3

    aobj  go to state 30


state 21

   15 term: term DIV . NUMBER

    NUMBER  shift, and go to state 31


state 22

   12 aobj: aobj . EXP NUMBER
   16 term: term aobj .

    EXP  shift, and go to state 19

    $default  reduce using rule 16 (term)


state 23

   18 mpolynomial: mpolynomial PLUS . mpolynomial

    VAR     shift, and go to state 1
    NUMBER  shift, and go to state 3

    aobj         go to state 10
    term         go to state 11
    mpolynomial  go to state 32


state 24

   19 mpolynomial: mpolynomial MINUS . mpolynomial

    VAR     shift, and go to state 1
    NUMBER  shift, and go to state 3

    aobj         go to state 10
    term         go to state 11
    mpolynomial  go to state 33


state 25

    6 atom: polynomial RELOPTOK . ZERO
    7     | polynomial RELOPTOK . rootindex

    ZERO    shift, and go to state 34
    RSYMBP  shift, and go to state 35
    RSYMBN  shift, and go to state 36

    rootindex  go to state 37


state 26

    5 formula: LEFTP formula RIGHTP .

    $default  reduce using rule 5 (formula)


state 27

    3 formula: formula . ANDTOK formula
    3        | formula ANDTOK formula .
    4        | formula . ORTOK formula

    $default  reduce using rule 3 (formula)


state 28

    3 formula: formula . ANDTOK formula
    4        | formula . ORTOK formula
    4        | formula ORTOK formula .

    ANDTOK  shift, and go to state 17

    $default  reduce using rule 4 (formula)


state 29

   12 aobj: aobj EXP NUMBER .

    $default  reduce using rule 12 (aobj)


state 30

   12 aobj: aobj . EXP NUMBER
   14 term: term PROD aobj .

    EXP  shift, and go to state 19

    $default  reduce using rule 14 (term)


state 31

   15 term: term DIV NUMBER .

    $default  reduce using rule 15 (term)


state 32

   18 mpolynomial: mpolynomial . PLUS mpolynomial
   18            | mpolynomial PLUS mpolynomial .
   19            | mpolynomial . MINUS mpolynomial

    $default  reduce using rule 18 (mpolynomial)


state 33

   18 mpolynomial: mpolynomial . PLUS mpolynomial
   19            | mpolynomial . MINUS mpolynomial
   19            | mpolynomial MINUS mpolynomial .

    $default  reduce using rule 19 (mpolynomial)


state 34

    6 atom: polynomial RELOPTOK ZERO .

    $default  reduce using rule 6 (atom)


state 35

   22 rootindex: RSYMBP . NUMBER polynomial

    NUMBER  shift, and go to state 38


state 36

   23 rootindex: RSYMBN . NUMBER polynomial

    NUMBER  shift, and go to state 39


state 37

    7 atom: polynomial RELOPTOK rootindex .

    $default  reduce using rule 7 (atom)


state 38

   22 rootindex: RSYMBP NUMBER . polynomial

    VAR     shift, and go to state 1
    MINUS   shift, and go to state 2
    NUMBER  shift, and go to state 3

    aobj         go to state 10
    term         go to state 11
    mpolynomial  go to state 12
    polynomial   go to state 40


state 39

   23 rootindex: RSYMBN NUMBER . polynomial

    VAR     shift, and go to state 1
    MINUS   shift, and go to state 2
    NUMBER  shift, and go to state 3

    aobj         go to state 10
    term         go to state 11
    mpolynomial  go to state 12
    polynomial   go to state 41


state 40

   22 rootindex: RSYMBP NUMBER polynomial .

    $default  reduce using rule 22 (rootindex)


state 41

   23 rootindex: RSYMBN NUMBER polynomial .

    $default  reduce using rule 23 (rootindex)
